--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
     </head>
 
     <body>
-        <nav>
-            <a href="home.html">Home</a>
-            <a href="products.html">Products</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-
         <div class="container">
             <div class="box1"></div>
-            <div class="box2"></div>
+            <div class="box2">
+                <img src="images/logo4.png" class="logo">
+                <nav>
+                    <a href="home.html">Home</a>
+                    <a href="products.html">Products</a>
+                    <a href="contact.html">Contact</a>
+                </nav>
+            </div>
             <div class="box3"></div>
             <div class="box4"></div>
             <div class="box5"></div>
@@ -32,14 +33,6 @@
             <div class="box15"></div>
 
 
-
-
-
-
-
         </div>
-
-
-
 
     </body>
