--- a/index.html
+++ b/index.html
@@ -9,30 +9,18 @@
 
     <body>
         <div class="container">
-            <div class="box1"></div>
-            <div class="box2">
+            <div class="box1">
+                <img src="images/product1.png" class="dproduct">
+            </div>
+            <div class="box2"></div>
+            <div class="box3">
                 <img src="images/logo4.png" class="logo">
                 <nav>
-                    <a href="home.html">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="products.html">Products</a>
                     <a href="contact.html">Contact</a>
                 </nav>
             </div>
-            <div class="box3"></div>
-            <div class="box4"></div>
-            <div class="box5"></div>
-            <div class="box6"></div>
-            <div class="box7"></div>
-            <div class="box8"></div>
-            <div class="box9"></div>
-            <div class="box10"></div>
-            <div class="box11"></div>
-            <div class="box12"></div>
-            <div class="box13"></div>
-            <div class="box14"></div>
-            <div class="box15"></div>
-
-
         </div>
 
     </body>
