--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div class="container">
             <div class="box1">
                 <img src="images/product1.png" class="dproduct">
+                <div class="line"></div>
             </div>
             <div class="box2"></div>
             <div class="box3">
