--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
             <div class="box1">
                 <img src="images/product1.png" class="dproduct">
                 <div class="line"></div>
+                <div class="text">
+                    <h1>NEW SUMMER SALE</h1>
+                    <h2>UP TO 50% OFF ON ALL PRODUCTS</h2>
+                    <br>
+                    <h1>NEW HOODIE LINE</h1>
+                    <h2>BLACK, GREY, AND WHITE</h2>
+                </div>
             </div>
             <div class="box2"></div>
             <div class="box3">
