added text to bottom section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,19 @@
                     <h2>BLACK, GREY, AND WHITE</h2>
                 </div>
             </div>
-            <div class="box2"></div>
+            <div class="box2">
+                <div class="text2">
+                    INFO
+                </div>
+                <div class="text3">
+                    CUSTOMER SUPPORT
+                </div>
+            <div class="text4">
+                <p>EMAIL: AZUREGEM@GMAIL.COM</p>
+                <p>PHONE: 021 323 1323</p>
+            </div>
+            
+            </div>
             <div class="box3">
                 <img src="images/logo4.png" class="logo">
                 <nav>
