--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
                     <h2>UP TO 50% OFF ON ALL PRODUCTS</h2>
                     <br>
                     <h1>NEW HOODIE LINE</h1>
-                    <h2>BLACK, GREY, AND WHITE</h2>
+                    <h2>
+                        BLACK, <text class="grey">GREY</text>, AND <text class="white">WHITE</text></h2>
                 </div>
             </div>
             <div class="box2">
@@ -27,11 +28,11 @@
                 <div class="text3">
                     CUSTOMER SUPPORT
                 </div>
-            <div class="text4">
-                <p>EMAIL: AZUREGEM@GMAIL.COM</p>
-                <p>PHONE: 021 323 1323</p>
-            </div>
-            
+                <div class="text4">
+                    <p>EMAIL: AZUREGEM@GMAIL.COM</p>
+                    <p>PHONE: 021 323 1323</p>
+                </div>
+
             </div>
             <div class="box3">
                 <img src="images/logo4.png" class="logo">
