added products and fit them into the display boxes

--- a/products.html
+++ b/products.html
@@ -22,12 +22,13 @@
 
                 <div class="box5">
                     <div class="d1">
+                        <img src="images/product1.png" class="p1">
                     </div>
                     <div class="d2">
-
+                        <img src="images/product2.png" class="p2">
                     </div>
                     <div class="d3">
-
+                        <img src="images/product3.png" class="p3">
                     </div>
 
 
