added product prices under products

--- a/products.html
+++ b/products.html
@@ -22,13 +22,19 @@
 
                 <div class="box5">
                     <div class="d1">
+                        <h1>JET BLACK HOODIE</h1>
                         <img src="images/product1.png" class="p1">
+                        <h2>$100</h2>
                     </div>
                     <div class="d2">
+                        <h1>STORM GREY HOODIE</h1>
                         <img src="images/product2.png" class="p2">
+                        <h2>$100</h2>
                     </div>
                     <div class="d3">
+                        <h1>PEARL WHITE HOODIE</h1>
                         <img src="images/product3.png" class="p3">
+                        <h2>$100</h2>
                     </div>
 
 
