--- a/products.html
+++ b/products.html
@@ -1,60 +1,58 @@
 <!doctype.html>
 
-        <head>
-            <title>
-                Home Page
-            </title>
-            <link rel="stylesheet" href="styles.css">
-            <script type="text/javascript">
-                var clicks = [0,0,0];
+    <head>
+        <title>
+            Home Page
+        </title>
+        <link rel="stylesheet" href="styles.css">
+        <script type="text/javascript">
+            var clicks = [0, 0, 0];
 
 
 
-                function hello(num) {
-                    clicks[num] += 1;
-                    document.getElementById("clicks"+ num).innerHTML = clicks[num]
-                };
-            </script>
-        </head>
+            function hello(num) {
+                clicks[num] += 1;
+                document.getElementById("clicks" + num).innerHTML = clicks[num]
+            };
 
-        <body>
-            <div class="container1">
-                <div class="box3">
-                    <img src="images/logo4.png" class="logo">
-                    <nav>
-                        <a href="index.html">Home</a>
-                        <a href="products.html">Products</a>
-                        <a href="contact.html">Sizing</a>
-                    </nav>
-                </div>
+            function myFunction() {
+                alert("item/s added to cart");
+            }
+        </script>
+    </head>
 
-                <div class="box5">
-                    <div class="d1">
-                        <h1>JET BLACK HOODIE</h1>
-                        <img src="images/product1.png" class="p1">
-                        <h2>$100</h2>
-                        <button type="button" onClick="hello(0)">Click me</button>
-                        <p>Clicks: <a id="clicks0">0</a></p>
-                    </div>
-                    <div class="d2">
-                        <h1>STORM GREY HOODIE</h1>
-                        <img src="images/product2.png" class="p2">
-                        <h2>$100</h2>
-                        <button type="button" onClick="hello(1)">Click me</button>
-                        <p>Clicks: <a id="clicks1">0</a></p>
-                    </div>
-                    <div class="d3">
-                        <h1>PEARL WHITE HOODIE</h1>
-                        <img src="images/product3.png" class="p3">
-                        <h2>$100</h2>
-                        <button type="button" onClick="hello(2)">Click me</button>
-                        <p>Clicks: <a id="clicks2">0</a></p>
-                    </div>
-
-
-                </div>
-
-
-
-
+    <body>
+        <div class="container1">
+            <div class="box3">
+                <img src="images/logo4.png" class="logo">
+                <nav>
+                    <a href="index.html">Home</a>
+                    <a href="products.html">Products</a>
+                    <a href="contact.html">Sizing</a>
+                </nav>
             </div>
+
+            <div class="box5">
+                <div class="d1">
+                    <h1>JET BLACK HOODIE</h1>
+                    <img src="images/product1.png" class="p1">
+                    <h2>$100</h2>
+                    <input type="number" name="amount" id="amountData2" min="1" value="1">
+                    <button onclick="myFunction()">Add to cart</button>
+                </div>
+                <div class="d2">
+                    <h1>PEARL WHITE HOODIE</h1>
+                    <img src="images/product2.png" class="p2">
+                    <h2>$100</h2>
+                    <input type="number" name="amount" id="amountData2" min="1" value="1">
+                    <button onclick="myFunction()">Add to cart</button>
+                </div>
+                <div class="d3">
+                    <h1>STORM GREY HOODIE</h1>
+                    <img src="images/product3.png" class="p3">
+                    <h2>$100</h2>
+                    <input type="number" name="amount" id="amountData2" min="1" value="1">
+                    <button onclick="myFunction()">Add to cart</button>
+                </div>
+            </div>
+        </div>
